# mcp-mysql

./: .dockerignore  .env.example  Dockerfile.mysql  Dockerfile.public  README.md  docker-compose.yml  main.py  pyproject.toml
tests/: test_main.py
