[project]
name = "mysql-mcp"
version = "0.1.0"
description = "MCP for managing MySQL databases"
package-mode = false
no-root = true

authors = [
    {name = "Pedro Lucas Lima",email = "pedro.lima@mercadolivre.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
aiomysql = ">=0.2.0,<0.3.0"
mcp = {extras = ["cli"], version = ">=1.9.3,<2.0.0"}
cryptography = "^45.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest-asyncio = "^0.23.7"  # Using a recent stable version
pytest-cov = "^5.0.0" # For code coverage
pytest-mock = "^3.12.0" # For mocker fixture

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
